[package]
name = "price-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.37.0", features = [ "macros", "rt-multi-thread" ] }
dotenvy = { version = "0.15.7" }
itertools = "0.13.0"
simple_logger = { version = "5.0.0" }
log = "0.4.21"
anyhow = "1.0.82"
serde = { version = "1.0.200", features = [ "derive" ] }
serde_json = { version = "1.0.116" }
chrono = { version = "0.4.38" }
async-trait = "0.1.80"
inindexer = { git = "https://github.com/INTEARnear/inindexer" } # Replace with near-utils when moved to a separate crate
inevents-redis = { git = "https://github.com/INTEARnear/inevents" }
intear-events = { git = "https://github.com/INTEARnear/inevents", default-features = false }
redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "connection-manager" ] }
sqlx = { version = "0.7.4", features = ["bigdecimal"] }
near-jsonrpc-client = "0.8.0"
near-jsonrpc-primitives = "0.20.1"
cached = { version = "0.51.4", features = [ "async", "async_tokio_rt_multi_thread" ] }
actix-web = "4.8.0"
rustls = "0.22.4"
rustls-pemfile = "2.1.2"
