[package]
name = "price-indexer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
dotenvy = { version = "0.15.7" }
itertools = "0.14.0"
simple_logger = { version = "5.0.0" }
log = "0.4.21"
anyhow = "1.0.82"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
chrono = { version = "0.4.38" }
async-trait = "0.1.80"
inindexer = "5.0.0"
inevents-redis = { git = "https://github.com/INTEARnear/inevents" }
intear-events = { git = "https://github.com/INTEARnear/intear-events" }
redis = { version = "0.25.3", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
sqlx = { version = "0.8.1", features = ["bigdecimal"] }
near-jsonrpc-client = "0.20.0"
near-jsonrpc-primitives = "0.34.1"
cached = { version = "0.56.0", features = [
    "async",
    "async_tokio_rt_multi_thread",
    "disk_store",
] }
actix-web = { version = "4.9.0", features = ["rustls-0_22"] }
rustls = "0.22.4"
rustls-pemfile = "2.1.3"
actix-cors = "0.7.0"
reqwest = { version = "0.12.7", features = ["json"] }
num-traits = "0.2.19"
tokio-util = "0.7.11"
serde_yaml = "0.9.34"
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
lazy_static = "1.5.0"
futures-util = "0.3.30"
parking_lot = "0.12.3"
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
url = "2.5.0"
hex = "0.4.3"
sha3 = "0.10.8"
bs58 = "0.5.1"
